kubernetes-exercises/old/support-files/traefik-deployment.yaml
kind: Deployment
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
metadata:
  name: traefik-ingress-controller
  namespace: default
  labels:
    k8s-app: traefik-ingress-lb
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      serviceAccountName: traefik-ingress-controller
      # terminationGracePeriodSeconds: 60
      containers:
      - image: traefik
        name: traefik-ingress-lb
        args:
        - --web
        - --kubernetes
        volumeMounts:
        - name: traefik-toml
          mountPath: "/etc/traefik/"
        - name: traefik-certs
          mountPath: "/certs"
      volumes:
        - name: traefik-toml
          configMap: 
            name: traefik-toml
        - name: traefik-certs
          secret:
            secretName: "traefik-certs"
